<resources>
    <string name="app_name">Aristo AI</string>
    <string name="chip_a">Introduction</string>
    <string name="chip_b">Apology</string>
    <string name="chip_c">Thanks</string>
    <string name="chip_d">Greeting</string>
    <string name="chip_e">Praise</string>
    <string name="chip_f">Inquiry</string>
    <string name="question_hint_1">What if there was a time machine?</string>
    <string name="question_hint_2">Let me know how to set specific goals.</string>
    <string name="question_hint_3">"Write an apology for being late. "</string>
    <string name="character_limit">Limit</string>
    <string name="animation">Animation</string>
    <string name="start">START</string>
    <string name="google_play_store">Google Play Store</string>
    <string name="Feedback">Feedback</string>
    <string name="login_register">Login / Register</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="new_account">Create Account</string>
    <string name="register">Create Account</string>
    <string name="login_here">Login here</string>
    <string name="write_question">Required</string>
    <string name="show_ads">Are you sure you want to view this ad?</string>
    <string name="YES">YES</string>
    <string name="CANCEL">CANCEL</string>
    <string name="chip_a_500">summarize in 500 characters</string>
    <string name="chip_a_2000">summarize in 2000 characters</string>
    <string name="sound">Typing Sound</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="time_out_error">Sorry time out error</string>
    <string name="try_again">Please try again in a few minutes</string>
    <string name="question_hint_4">Summarize Harry Potter</string>
    <string name="question_hint_5">Tell me what you cook with chicken and onions.</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="agree_to_the_terms_of_service">I agree to the Terms of Service</string>
    <string name="agree_to_the_privacy_policy">I agree to the Privacy Policy</string>
    <string name="progress_hint_1">Ask the unanswered questions you can\'t ask Google.</string>
    <string name="progress_hint_2">Be clear and specific about your question or topic.</string>
    <string name="agree_checkbox">* Please agree to the check box</string>
    <string name="url_terms_of_service">https://docs.google.com/document/d/e/2PACX-1vTNIqsyh06m6pqXk8aB7lBMDTMB8tmbQdFK9aRUJMHff0HwAr1m62C29cNZUl2zoZHWNV0tCxmYJCFN/pub</string>
    <string name="url_privacy_policy">https://docs.google.com/document/d/e/2PACX-1vR5V3uTXEIlfEC06nNRjt1aGO__wjDaysGjct03He_RD7XgYN6QuLvAWEKiZTQ_3TClsAqRzzhhGQoF/pub</string>
    <string name="font">serif</string>
    <string name="manage_your_subscription">Manage your subscription</string>

</resources>