<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="5 stars awarded!"
            android:textColor="@color/main_dark_orange"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Consume one star and rephrase the English sentence."
            android:textColor="@color/main_light_orange"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/im_star" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="bottom"
                android:text="x "
                android:textColor="@color/main_dark_orange"
                android:textSize="60dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:gravity="bottom"
                android:text="5"
                android:textColor="@color/main_dark_orange"
                android:textSize="100dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/x_tutorial_3_policy_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/x_view_answer_corner_gray"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/x_tutorial_3_check_terms_of_use"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:checked="false" />

                <TextView
                    android:id="@+id/x_tutorial_3_text_terms_of_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_to_the_terms_of_service"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/x_tutorial_3_check_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:checked="false" />

                <TextView
                    android:id="@+id/x_tutorial_3_text_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_to_the_privacy_policy"
                    android:textSize="16dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/x_tutorial_3_text_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_yellow"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/agree_checkbox"
                android:textColor="@color/md_theme_light_error"
                android:textSize="18dp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/x_view_answer_corner_blue"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="Sign-in earns another "
                    android:textColor="@color/main_blue"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:src="@drawable/im_star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text=" x5 stars"
                    android:textColor="@color/main_blue"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/x_tutorial_3google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:buttonSize="wide" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="@dimen/tutorial_circle"
            android:layout_height="@dimen/tutorial_circle"
            android:layout_margin="@dimen/tutorial_circle_margin"
            android:background="@drawable/view_small_circle_true" />

        <TextView
            android:layout_width="@dimen/tutorial_circle"
            android:layout_height="@dimen/tutorial_circle"
            android:layout_margin="@dimen/tutorial_circle_margin"
            android:background="@drawable/view_small_circle_true" />

        <TextView
            android:layout_width="@dimen/tutorial_circle"
            android:layout_height="@dimen/tutorial_circle"
            android:layout_margin="@dimen/tutorial_circle_margin"
            android:background="@drawable/view_small_circle_false" />
    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/md_theme_dark_inversePrimary"
        android:padding="10dp"
        android:text="Done"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>