<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/x_my_page_header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/im_ny"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/x_my_page_layout_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/x_my_page_header">

        <LinearLayout
            android:id="@+id/x_my_page_policy_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/x_my_page_check_terms_of_use"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:checked="false" />

                <TextView
                    android:id="@+id/x_my_page_text_terms_of_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_to_the_terms_of_service"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/x_my_page_check_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:checked="false" />

                <TextView
                    android:id="@+id/x_my_page_text_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_to_the_privacy_policy"
                    android:textSize="14dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/x_my_page_text_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/agree_checkbox"
                android:textColor="@color/md_theme_dark_errorContainer"
                android:visibility="visible" />
        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:buttonSize="wide" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/x_my_page_layout_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/x_my_page_layout_guest">

        <Button
            android:id="@+id/x_my_page_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
            android:text="@string/logout"
            android:textSize="18dp"
            android:textColor="@color/black_text" />

        <LinearLayout
            android:id="@+id/x_my_page_info"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:background="@drawable/x_view_info"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_info" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:text="Information"
                android:gravity="center|left"
                android:textSize="20dp"
                android:textColor="@color/md_theme_dark_outline"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/view_corner_gold">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"
                        android:padding="15dp"
                        android:src="@drawable/im_star" />

                    <TextView
                        android:id="@+id/x_my_page_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="0"
                        android:textColor="@color/main_yellow"
                        android:textSize="24dp"
                        android:textStyle="bold|italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="# of stars"
                        android:textColor="@color/gray"
                        app:layout_constraintBottom_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/view_corner_gold">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/x_view_button_gradation"
                        android:padding="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_shine"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/x_my_page_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="0"
                        android:textColor="@color/main_light_orange"
                        android:textSize="24dp"
                        android:textStyle="bold|italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="# of reviews"
                        android:textColor="@color/gray"
                        app:layout_constraintBottom_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/view_corner_gold">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="abc"
                        android:textColor="@color/main_dark_orange"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/main_dark_orange"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/x_my_page_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="0"
                        android:textColor="@color/main_dark_orange"
                        android:textSize="24dp"
                        android:textStyle="bold|italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="# of words modified"
                        android:textColor="@color/gray"
                        app:layout_constraintBottom_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/view_corner_gold">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"
                        android:padding="10dp"
                        android:rotation="-30"
                        android:src="@drawable/ic_pie_chart" />

                    <TextView
                        android:id="@+id/x_my_page_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="0"
                        android:textColor="@color/main_yellow"
                        android:textSize="24dp"
                        android:textStyle="bold|italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="% of mistakes"
                        android:textColor="@color/gray"
                        app:layout_constraintBottom_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/x_my_page_adView_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="ca-app-pub-9264044524321014/8831591998"
            ads:layout_constraintTop_toTopOf="parent"></com.google.android.gms.ads.AdView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>